[gd_scene load_steps=2 format=3 uid="uid://vtt6palgjkqs"]

[ext_resource type="Script" path="res://utils/debug/debug.gd" id="1"]

[node name="debug" type="Node"]
process_mode = 3
script = ExtResource("1")

[node name="h_box_container" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="input_display" type="RichTextLabel" parent="h_box_container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 2
scroll_active = false
scroll_following = true
autowrap_mode = 0
selection_enabled = true

[node name="v_box_container" type="VBoxContainer" parent="h_box_container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBC" type="VBoxContainer" parent="h_box_container/v_box_container"]
layout_mode = 2
size_flags_vertical = 3

[node name="VD_HBC" type="HBoxContainer" parent="h_box_container/v_box_container/VBC"]
layout_mode = 2

[node name="VD_Label" type="Label" parent="h_box_container/v_box_container/VBC/VD_HBC"]
layout_mode = 2
text = "Video Driver : "

[node name="VD_Display" type="Label" parent="h_box_container/v_box_container/VBC/VD_HBC"]
layout_mode = 2

[node name="FSP_HBC" type="HBoxContainer" parent="h_box_container/v_box_container/VBC"]
layout_mode = 2

[node name="FPS_Label" type="Label" parent="h_box_container/v_box_container/VBC/FSP_HBC"]
layout_mode = 2
text = "FPS : "

[node name="FPS_Display" type="Label" parent="h_box_container/v_box_container/VBC/FSP_HBC"]
layout_mode = 2

[node name="GAME_VBC" type="VBoxContainer" parent="h_box_container/v_box_container"]
layout_mode = 2
size_flags_vertical = 3

[node name="time" type="Label" parent="h_box_container/v_box_container/GAME_VBC"]
layout_mode = 2
text = "00:00:00 0000"
horizontal_alignment = 2

[node name="difficulty" type="Label" parent="h_box_container/v_box_container/GAME_VBC"]
layout_mode = 2
text = "00:00:00 0000"
horizontal_alignment = 2

[node name="level" type="Label" parent="h_box_container/v_box_container/GAME_VBC"]
layout_mode = 2
text = "00:00:00 0000"
horizontal_alignment = 2

[node name="player" type="CenterContainer" parent="h_box_container/v_box_container"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSplitContainer" type="HSplitContainer" parent="h_box_container/v_box_container/player"]
layout_mode = 2

[node name="VBoxContainerL" type="VBoxContainer" parent="h_box_container/v_box_container/player/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="sticks" type="HBoxContainer" parent="h_box_container/v_box_container/player/HSplitContainer/VBoxContainerL"]
layout_mode = 2
size_flags_stretch_ratio = 2.0
alignment = 1

[node name="move" type="VBoxContainer" parent="h_box_container/v_box_container/player/HSplitContainer/VBoxContainerL/sticks"]
layout_mode = 2

[node name="forward" type="Label" parent="h_box_container/v_box_container/player/HSplitContainer/VBoxContainerL/sticks/move"]
layout_mode = 2

[node name="HSeparator1" type="HSeparator" parent="h_box_container/v_box_container/player/HSplitContainer/VBoxContainerL/sticks/move"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="h_box_container/v_box_container/player/HSplitContainer/VBoxContainerL/sticks/move"]
layout_mode = 2

[node name="left" type="Label" parent="h_box_container/v_box_container/player/HSplitContainer/VBoxContainerL/sticks/move/HBoxContainer"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="h_box_container/v_box_container/player/HSplitContainer/VBoxContainerL/sticks/move/HBoxContainer"]
layout_mode = 2

[node name="right" type="Label" parent="h_box_container/v_box_container/player/HSplitContainer/VBoxContainerL/sticks/move/HBoxContainer"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="h_box_container/v_box_container/player/HSplitContainer/VBoxContainerL/sticks/move"]
layout_mode = 2

[node name="backward" type="Label" parent="h_box_container/v_box_container/player/HSplitContainer/VBoxContainerL/sticks/move"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="h_box_container/v_box_container/player/HSplitContainer/VBoxContainerL/sticks"]
layout_mode = 2

[node name="look" type="VBoxContainer" parent="h_box_container/v_box_container/player/HSplitContainer/VBoxContainerL/sticks"]
layout_mode = 2

[node name="up" type="Label" parent="h_box_container/v_box_container/player/HSplitContainer/VBoxContainerL/sticks/look"]
layout_mode = 2

[node name="HSeparator1" type="HSeparator" parent="h_box_container/v_box_container/player/HSplitContainer/VBoxContainerL/sticks/look"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="h_box_container/v_box_container/player/HSplitContainer/VBoxContainerL/sticks/look"]
layout_mode = 2

[node name="left" type="Label" parent="h_box_container/v_box_container/player/HSplitContainer/VBoxContainerL/sticks/look/HBoxContainer"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="h_box_container/v_box_container/player/HSplitContainer/VBoxContainerL/sticks/look/HBoxContainer"]
layout_mode = 2

[node name="right" type="Label" parent="h_box_container/v_box_container/player/HSplitContainer/VBoxContainerL/sticks/look/HBoxContainer"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="h_box_container/v_box_container/player/HSplitContainer/VBoxContainerL/sticks/look"]
layout_mode = 2

[node name="down" type="Label" parent="h_box_container/v_box_container/player/HSplitContainer/VBoxContainerL/sticks/look"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="h_box_container/v_box_container/player/HSplitContainer/VBoxContainerL"]
layout_mode = 2

[node name="player_target" type="HBoxContainer" parent="h_box_container/v_box_container/player/HSplitContainer/VBoxContainerL"]
layout_mode = 2

[node name="player_target_name" type="Label" parent="h_box_container/v_box_container/player/HSplitContainer/VBoxContainerL/player_target"]
layout_mode = 2

[node name="player_target_distance" type="Label" parent="h_box_container/v_box_container/player/HSplitContainer/VBoxContainerL/player_target"]
layout_mode = 2

[node name="player_velocity" type="HBoxContainer" parent="h_box_container/v_box_container/player/HSplitContainer/VBoxContainerL"]
layout_mode = 2

[node name="vector" type="Label" parent="h_box_container/v_box_container/player/HSplitContainer/VBoxContainerL/player_velocity"]
layout_mode = 2

[node name="length" type="Label" parent="h_box_container/v_box_container/player/HSplitContainer/VBoxContainerL/player_velocity"]
layout_mode = 2

[node name="player_direction" type="HBoxContainer" parent="h_box_container/v_box_container/player/HSplitContainer/VBoxContainerL"]
layout_mode = 2

[node name="vector" type="Label" parent="h_box_container/v_box_container/player/HSplitContainer/VBoxContainerL/player_direction"]
layout_mode = 2

[node name="length" type="Label" parent="h_box_container/v_box_container/player/HSplitContainer/VBoxContainerL/player_direction"]
layout_mode = 2

[node name="VBoxContainerR" type="VBoxContainer" parent="h_box_container/v_box_container/player/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ceiling" type="Label" parent="h_box_container/v_box_container/player/HSplitContainer/VBoxContainerR"]
layout_mode = 2

[node name="wall" type="Label" parent="h_box_container/v_box_container/player/HSplitContainer/VBoxContainerR"]
layout_mode = 2

[node name="floor" type="Label" parent="h_box_container/v_box_container/player/HSplitContainer/VBoxContainerR"]
layout_mode = 2

[node name="collisions" type="Label" parent="h_box_container/v_box_container/player/HSplitContainer/VBoxContainerR"]
layout_mode = 2

[node name="collider" type="Label" parent="h_box_container/v_box_container/player/HSplitContainer/VBoxContainerR"]
layout_mode = 2
